--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tictactoe",
+  "name": "my-repos",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "3.3.1"
   }
 }
